# ds-widget

./: Cargo.toml  LICENSE  README.md  build.rs
assets/: icon_32.rgba  icon_64.rgba
src/: core.rs  main.rs
src/app/: login.rs  mod.rs  store.rs  widget.rs
